[tool.poetry]
name = "pytest-jtr"
version = "0.1.0"
description = ""
authors = ["Gleams API user <Stephen.Swannell+ghapi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11.0"
pytest = "^7.1.2"
pytest-metadata = "^2.0.1"

[tool.poetry.dev-dependencies]
tox = "^3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
